[package]
name = "souporcellx"
version = "0.1.0"
edition = "2021"
description = "Souporcell workflow orchestrator for Slurm clusters with grouped multi-BAM support"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
csv = "1"
flate2 = "1"
which = "6"
dirs = "5"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
